# CIS660_Maya_VoMoBo

./: .gitignore  CMakeLists.txt  File.cu  Header.h  Kernel.cu  KernelHelper.cpp  KernelHelper.h  README.md  VoMoBo.sln  VoMoBo.vcxproj  VoMoBo.vcxproj.filters
VoMoBo/x64/Debug/: vc143.idb
VoMoBo/x64/Debug/VoMoBo.tlog/: CL.command.1.tlog  VoMoBo.lastbuildstate
VoMoBo/x64/Release/: File.cu-36270244.deps  File.cu.cache  VoMoBo.iobj  VoMoBo.ipdb  VoMoBo.mll.recipe
VoMoBo/x64/Release/VoMoBo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  VoMoBo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.read.100.tlog  link.read.101.tlog  link.read.102.tlog  link.read.71.tlog  link.secondary.1.tlog  link.write.1.tlog
libs/OpenMesh/src/OpenMesh/Tools/Decimater/: CollapseInfoT.hh  DecimaterT.hh  DecimaterT_impl.hh  ModQuadricT.hh
scripts/: gui.py
src/: MayaPlugin.cpp  boundingProxy.cpp  boundingProxy.h  brushContext.cpp  brushContext.h
x64/Release/: VoMoBo.exp  VoMoBo.lib  VoMoBo.mll
